codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__command_popup__tests__command_popup_monitor.snap
---
source: tui/src/bottom_pane/command_popup.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 72, height: 1 },
    content: [
        "› /monitor  run a persistent command that notifies Codex on output      ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | REVERSED,
        x: 12, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 66, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | REVERSED,
    ]
}
