codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__command_popup__tests__command_popup_watch.snap
---
source: tui/src/bottom_pane/command_popup.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 72, height: 1 },
    content: [
        "› /watch  notify Codex when a directory or Git HEAD changes             ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | REVERSED,
        x: 10, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 59, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | REVERSED,
    ]
}
